# COMP371-Project

./: .gitignore  CMakeLists.txt  City.cpp  City.h  LightSource.cpp  LightSource.h  LightSourceManager.h  Model.cpp  Model.h  OBJloader.h  PerlinNoise.cpp  PerlinNoise.h  README.txt  RaycastCollisions.h  Roles.txt  Shader() example.txt  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  TimexLetterModeler.h  lightShader.fs  lightShader.vs  mainProject.cpp  modelShader.fs  modelShader.vs  multiLight.fs  shaders.h  shadowShader.fs  shadowShader.vs  texture.h  uiShader.vs  vertices.h
CollisionSystem/: RaycastCollisions.h
LightingSystem/: LightSourceManager.h  lightShader.vs
Models/: Model.cpp  Model.h  Skybox.h  modelShader.fs  modelShader.vs
Objects/: OBJloader.h
Terrain/: City.cpp  City.h  Terrain.cpp
UISystem/: TimexLetterModeler.h  uiShader.fs
